--- a/src/frontend/src/styles/Login.module.css
+++ b/src/frontend/src/styles/Login.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #27262C;
+    background-color: #0a192f;
 }
 
 .card {
@@ -38,7 +38,11 @@
 }
 
 .button {
-    background-color: #007bff !important;
-    color: white !important;
+    background-color: #64ffda !important;
+    color: #0a192f  !important;
     font-weight: bold !important;
+}
+.forgotPassword {
+    color : white;
+    padding-top: 10px;
 }
