--- a/src/frontend/src/styles/Report.module.css
+++ b/src/frontend/src/styles/Report.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     min-height: 100vh;
-    background-color: #f9fafb;
+    background: linear-gradient(to bottom, #0a192f, #dce4ec);
 }
 
 .mainContent {
@@ -11,6 +11,7 @@
 }
 
 .header {
+    color: white;
     font-weight: bold;
     margin-bottom: 16px;
 }
