--- a/src/frontend/src/styles/Sidebar.module.css
+++ b/src/frontend/src/styles/Sidebar.module.css
@@ -2,7 +2,7 @@
 .sidebar {
     width: 250px;
     height: 100vh;
-    background-color: #1e1e2f;
+    background-color: #0a192f;
     color: white;
     display: flex;
     flex-direction: column;
@@ -23,6 +23,7 @@
     gap: 15px;
     margin-bottom: 20px;
     justify-content: center;
+    padding-right: 30px ;
     width: 100%;
 }
 
@@ -56,7 +57,7 @@
 }
 
 .listItemIcon {
-    color: white;
+    color: white !important;
 }
 
 /* Active Item */
